--- a/html.html
+++ b/html.html
@@ -29,7 +29,7 @@
         Participación en actividades deportivas: En algunos de sus viajes, Diego estuvo presente en eventos relacionados con el fútbol y actividades comunitarias. Su presencia solía motivar iniciativas locales para promover el deporte.
     </h3>
         
-        <center><h2>Vida fuera del campo</h2></center>
+        <center><h2>Vida Fuera del campo</h2></center>
           <h3>problemas de salud y adicciones: Maradona luchó durante gran parte de su vida con la adicción a las drogas y al alcohol, lo que afectó su rendimiento y su salud.
             Entrenador: Fue director técnico de clubes y de la selección argentina (2008–2010), donde dirigió a Lionel Messi en el Mundial de Sudáfrica 2010.
             Problemas legales y financieros: Enfrentó varios conflictos, incluidos problemas fiscales en Italia y disputas familiares.</h3>
